--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -38,8 +38,8 @@
   </table>
   <div style="float:right;">
     <%= submit_tag '删除'%>
-    <%= submit_tag '全选', :onclick => 'checkAllInputs();return false;'%>
-    <%= submit_tag '全清', :onclick => 'checkAllInputs(false);return false;'%>
+    <%= submit_tag '全选', :onclick => 'wefootball.checkAllInputs();return false;'%>
+    <%= submit_tag '全清', :onclick => 'wefootball.checkAllInputs(false);return false;'%>
   </div>
 </div>
 <%end%>
