--- a/app/views/team_joins/index_team.html.erb
+++ b/app/views/team_joins/index_team.html.erb
@@ -2,12 +2,12 @@
 <div class="seperateLine"></div>
 
 <%if @admin_teams.length > 0%>
-<h2><%= h "#{@user.nickname}管理的球队"%></h2>
+<h2>管理的球队</h2>
 <%= render(:partial => 'shared/team_icon', :collection => @admin_teams)%>
   
 <div class="seperateLine clearBoth"></div>
 <%end%>
 
-<h2><%= h "#{@user.nickname}参加的球队"%></h2>
-<%= render(:partial => 'shared/team_icon', :collection => @uts.map {|ut| ut.team})%>
+<h2>参加的球队</h2>
+<%= render(:partial => 'shared/team_icon', :collection => @other_teams)%>
 <div class="clearBoth"></div>
