--- a/app/views/team_views/show.html.erb
+++ b/app/views/team_views/show.html.erb
@@ -38,7 +38,7 @@
       <%= link_to(image_tag("quitFromTeam.gif", :title=>"退出球队"), team_join_path(@user_team.id),:method=>:delete)%>
     <%elsif @can_request%>
       <%= link_to(image_tag("inviteIntoTeam.gif", :title=>"申请加入球队"), '#', 
-            :onclick=>'openDialog(event, "#send_team_join_request_div");return false;')%>
+            :onclick=>'wefootball.openDialog(event, "#send_team_join_request_div");return false;')%>
     <%end%>
     <%if current_user.is_team_admin_of?(@team)%>
       <%= link_to(image_tag("inviteIntoTeam.gif", :title=>"邀请朋友加入"), new_team_team_join_invitation_path(@team))%>
@@ -67,7 +67,7 @@
         <%= link_to("退出球队", team_join_path(@user_team.id),:method=>:delete)%>
       <%elsif @can_request%>
         <%= link_to("申请加入球队", '#', 
-            :onclick=>'openDialog(event, "#send_team_join_request_div");;return false;')%>
+            :onclick=>'wefootball.openDialog(event, "#send_team_join_request_div");;return false;')%>
       <%end%>
       <%if current_user.is_team_admin_of?(@team)%>
         <%= link_to("邀请朋友加入", new_team_team_join_invitation_path(@team))%>
