--- a/public/stylesheets/wefootball.css
+++ b/public/stylesheets/wefootball.css
@@ -120,6 +120,7 @@ div.clearBoth {
 }
 
 div.icon {
+    background: #fff;
     width:72px;
     height:110px;
     text-align:center;
@@ -129,8 +130,9 @@ div.icon {
 }
 
 img.icon {
+    background: #fff;
     border:solid 1px #3D681A;
-    margin:0 7px;
+    margin:0px auto;
     padding: 2px;
     display: block;
 }
@@ -193,7 +195,7 @@ form.tab {
     margin-right: 5px;
     padding:5px 10px 0 10px;
     border:solid 1px #3D681A;
-    border-bottom:solid 1px  #ACBE33;
+    border-bottom:solid 1px #ACBE33;
     background-color:#ACBE33;
     font-size:12px;
     color:#000; 
@@ -209,7 +211,7 @@ a.tab_link {
 }
 
 .tabSelected {
-    border-bottom: 3px solid #FCFDFE;
+    border-bottom: 2px solid #FCFDFE;
     background-color:#FCFDFE; 
 }
 
@@ -237,7 +239,10 @@ div.post p{
 
 div.post .title {
     background-color:#EEEEFF; 
-    padding: 2px 250px 2px 10px;
+    padding: 2px 10px 2px 10px;
+    width: 80%;
+    display: -moz-inline-box;/*firefox hack*/
+    display: inline-block;
 }
 
 div.post .title .name{
