--- a/app/views/team_joins/formation_management.html.erb
+++ b/app/views/team_joins/formation_management.html.erb
@@ -69,7 +69,7 @@
         formation.adjustPositions()
       <%end%>
       
-      var offset = 245
+      /*var offset = 245
       j('#scroll_field').css('position', 'relative').css('top', -30)
       var field_scroller = function(){
         var scrolltop = j(window).scrollTop()
@@ -77,7 +77,7 @@
         else j('#scroll_field').css('top', -30)
       }
       j(window).scroll(field_scroller)
-      j(window).resize(field_scroller)
+      j(window).resize(field_scroller)*/
     })
 
 <%end%>
