--- a/public/stylesheets/formation_management.css
+++ b/public/stylesheets/formation_management.css
@@ -1,8 +1,7 @@
 h2{margin:2px 0}
 ul.sidebar_menu li {
     float:left;
-    margin-left: 5px;
-    margin-right: 5px;
+    margin: 5px 5px 0px 5px;
 }
 div.icon {
     width:69px;
