--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -1,50 +1,11 @@
-<h1>Listing matches</h1>
+<%content_for(:stylesheet) do%>
+  <%= stylesheet_link_tag 'activityitem' %>
+<%end%>
 
-<table>
-  <tr>
-    <th>Start time</th>
-    <th>Location</th>
-    <th>Match type</th>
-    <th>Size</th>
-    <th>Has judge</th>
-    <th>Has card</th>
-    <th>Has offside</th>
-    <th>Win rule</th>
-    <th>Description</th>
-    <th>Half match length</th>
-    <th>Rest length</th>
-    <th>Host team</th>
-    <th>Guest team</th>
-    <th>Host team goal</th>
-    <th>Guest team goal</th>
-    <th>Situation</th>
-  </tr>
+<h1><%=h @title%></h1>
+<div id="wide_left_content">
+<div class="seperateLine" style="margin-bottom:20px"></div>
+<%= render(:partial => 'shared/match_list', :object => @matches, :locals => {:display_team => @team_display})%>
+</div>
 
-<% for match in @matches %>
-  <tr>
-    <td><%=h match.start_time %></td>
-    <td><%=h match.location %></td>
-    <td><%=h match.match_type %></td>
-    <td><%=h match.size %></td>
-    <td><%=h match.has_judge %></td>
-    <td><%=h match.has_card %></td>
-    <td><%=h match.has_offside %></td>
-    <td><%=h match.win_rule %></td>
-    <td><%=h match.description %></td>
-    <td><%=h match.half_match_length %></td>
-    <td><%=h match.rest_length %></td>
-    <td><%=h match.host_team_id %></td>
-    <td><%=h match.guest_team_id %></td>
-    <td><%=h match.host_team_goal %></td>
-    <td><%=h match.guest_team_goal %></td>
-    <td><%=h match.situation %></td>
-    <td><%= link_to 'Show', match %></td>
-    <td><%= link_to 'Edit', edit_match_path(match) %></td>
-    <td><%= link_to 'Destroy', match, :confirm => 'Are you sure?', :method => :delete %></td>
-  </tr>
-<% end %>
-</table>
-
-<br />
-
-<%= link_to 'New match', new_match_path %>
+<div class="clearBoth"></div>
