--- a/app/views/teams/new.html.erb
+++ b/app/views/teams/new.html.erb
@@ -2,6 +2,6 @@
 <% form_for @team do |f| -%>
 
 <%= render :partial => "form", :locals=>{:f=> f}%>
-
+    <%= hidden_field_tag :back_uri, params[:back_uri] if !params[:back_uri].nil?%>
 <p><%= submit_tag '创建' %></p>
 <% end -%>
